# emerald

./: .gitignore  Cargo.toml  README.md  funny.mrld  test.mrld  test2.mrld  test3.mrld  test4.mrld  todo.txt
libraries/std/: condition.mrld  control_flow.mrld  lib.mrld  marker.mrld  mc.mrld  mc_float.mrld  mc_int.mrld  mc_string.mrld  number.mrld  runtime_condition.mrld  score.mrld  string.mrld  types.mrld  world.mrld
libraries/std/builtin_types/: array.mrld  dict.mrld  number.mrld  option.mrld  selector.mrld  string.mrld
libraries/std/collections/: hashmap.mrld
libraries/std/math/: complex.mrld  constants.mrld
libraries/std/minecraft/: marker.mrld  mc.mrld  mc_float.mrld  mc_int.mrld  mc_string.mrld  runtime_condition.mrld
src/: builtins.rs  error.rs  generator.rs  interpreter.rs  lexer.rs  main.rs  optimize.rs  parser.rs  sample.tao  value.rs
