[package]
name = "emerald"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
ansi_term = "0.12"
ariadne = "0.1.5"
convert_case = "0.5.0"
rand = "0.8.5"
fnv = "1.0.7"

[profile.dev]
opt-level = 2

